chore: swagger final documentation for authentication
