# src/docs/swagger.json
@@ -26,76 +26,29 @@
     "definitions": {
         "Users": {
             "properties": {
-                "username":{
-                    "type": "string"
-                },
                 "email":{
                     "type": "string"
                 },
-                "authentication": {
-                  "properties": {
-                     "password": {
-                        "type": "string"
-                    },
-                     "salt": {
-                        "type": "string"
-                    },
-                    "sessionToken": {
-                        "type": "string"
-                    }
-                  },
-                  "type": "object"
-                }
-            }
-        },
-        "Tasks": {
-            "properties": {
-                "title":{
-                    "type": "string"
-                },
-                "description":{
-                    "type": "string"
-                },
-                "date":{
-                    "type": "string"
-                },
-                "status":{
-                    "type": "string"
-                },
-                "priority": {
+                "password": {
                     "type": "string"
                 }
             }
         }
     },
     "paths": {
-        "/tasks": {
-            "get": {
-                "tags": [
-                    "Tasks"
-                ],
-                "summary": "Get All Tasks",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema":{
-                            "$ref": "#/definitions/Tasks"
-                        }
-                    }
-                }
-            },
+        "/register": {
             "post": {
                 "tags": [
-                    "Tasks"
+                    "Users"
                 ],
-                "summary": "Create a new Task",
+                "summary": "Register a new User",
                 "parameters": [
                   {
                     "in": "body",
-                    "name": "Tasks",
-                    "description": "Create your tasks",
+                    "name": "Users",
+                    "description": "Register your User with e-mail and password!",
                     "schema": {
-                        "$ref": "#/definitions/Tasks"
+                        "$ref": "#/definitions/Users"
                     }
                   }
                 ],
@@ -106,11 +59,43 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Tasks"
+                            "$ref": "#/definitions/Users"
                         }
                     },
                     "400": {
-                        "description": "Failed. Task already created!"
+                        "description": "Failed. User already registered!"
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Sign In with your User",
+                "parameters": [
+                  {
+                    "in": "body",
+                    "name": "Users",
+                    "description": "Sign In your User with e-mail and password!",
+                    "schema": {
+                        "$ref": "#/definitions/Users"
+                    }
+                  }
+                ],
+                "produces":[
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Users"
+                        }
+                    },
+                    "400": {
+                        "description": "Failed. The received user is not registered!"
                     }
                 }
             }
